2003-08-22  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* Don't use run-time config file.
	* common.h, common.c (cob_config_lookup, cob_config_compare): Removed.
	* call.c (cob_init_call): Handle env "COB_DYNAMIC_RELOADING".

2003-08-21  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h (cob_module): New member `flag_binary_print_full'.
	* termio.c (cob_display): Binary full print.

2003-08-21  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h (cob_display_sign): New enum.
	(cob_module): New entry `display_sign'.
	* common.c (cob_real_get_sign, cob_real_put_sign): Check display_sign.

2003-08-19  Keisuke Nishida  <knishida@netlab.jp>

	* termio.c (cob_accept_command_line): Omit the program name (argv[0]).

2003-08-17  Keisuke Nishida  <knishida@netlab.jp>

	* termio.h, termio.c (cob_display_environment): New function.
	(cob_accept_environment): Remove the second argument.

2003-08-12  Keisuke Nishida  <knishida@netlab.jp>

	* byteswap.h: New file.
	* byteorder.h: Removed.

2003-08-12  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_return_code): Removed.

2003-08-10  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (COB_FLAG_BINARY_SWAP): New macro.
	* move.h, move.c (cob_binary_get_int): New function.
	(cob_binary_get_int64): New function.
	(cob_binary_set_int): New function.
	(cob_binary_set_int64): New function.
	* common.h (COB_TYPE_NUMERIC_NATIVE): Removed.
	* common.h, common.c (cob_binary_convert): Removed.
	* move.c (cob_move_display_to_native): Removed.
	(cob_move_native_to_display): Removed.
	* numeric.c (cob_decimal_set_native): Removed.
	(cob_decimal_get_native): Removed.

2003-08-09  Keisuke Nishida  <knishida@netlab.jp>

	* call.c (cob_call_error): Exit with status 1.

2003-08-07  Keisuke Nishida  <knishida@netlab.jp>

	* byteorder.h: New file.
	* common.h (COB_TYPE_NUMERIC_NATIVE): New macro.
	* common.h, common.c (cob_binary_convert): New function.
	* move.c (cob_move_display_to_native): New function.